========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-01-09

  - Fixed a bug (issue #94) in the load cache that wouldn't handle files
    disappearing after having been moved.


2016-01-03

  - Moved beancount.web.scrape.scrape() to beancount.web.web.scrape_webapp() to
    isolate beancount.web.scrape from dependencies, so that other projects may
    reuse it.


2015-12-25

  - Closed multiple obsolete branches: parse_test_utils, display_context,
    performance, datatypes.

  - Added some utilities for parsing strings for writing tests that use the
    local variables present in the caller (a bit of magic).

  - Improved date parsing from command-line options for some scripts; imported
    from branch 'text_statements'.


2015-12-24

  - Implemented metadata stack and "pushmeta" and "popmeta" directives mirroring
    "pushtag" and "poptag". These new directives work similarly, but setting
    metadata fields instead of tags themselves. The parser maintains a stack of
    values for each metadata field. Values explicitly set on the Transactions
    themselves are not overridden by the meta stack.


2015-12-21

  - Created a new project script that uses specific metadata on Open directives
    to generate a document of a user's assets, institution names, addresses and
    contact info, and account types and approximate value. Note: I haven't made
    the example file include necessary fields to demo or document this yet.

  - The loader now supports loading encrypted files transparently. If a filename
    ends with .gpg or .asc (and contains armored content), the file is run
    through a gpg subprocess to decrypt it. No temporary files are created. Note
    that caching for those files is disabled.

    If you're writing a script, you can also call
    beancount.loaded.load_encrypted_file() directly to avoid the check.
